# xgen-ontology

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: build_and_search.py  build_csv.py
src/xgen_ontology/: __init__.py  facade.py  llm.py  models.py  ontology.py  protocols.py  text.py
src/xgen_ontology/backends/: __init__.py  memory.py  sparql.py
src/xgen_ontology/search/: __init__.py  fusion.py  oneshot.py
tests/: conftest.py  test_backends.py  test_cleaning.py  test_extract_pipeline.py  test_graph_ops.py  test_ingest.py  test_search.py  test_tabular.py
